Fixed Card Input Parser Issue